<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMWMainActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_bmw_image"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bmw"/>

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/DisplayFieldStyle"
            android:layout_below="@+id/empty_bmw_image"
            android:text="@string/empty_view_title_text" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            style="@style/DisplayFieldStyle"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:text="@string/empty_view_subtitle_text" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_brand"/>
</RelativeLayout>
