<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".BMWDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <!-- Image category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_brand_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_brand"
                    style="@style/CategoryStyle" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <!--brand name Text display -->
                    <TextView
                        android:id="@+id/brand_name_display"
                        android:text="@string/category_fuel"
                        style="@style/DisplayFieldStyle" />
                </LinearLayout>
            </LinearLayout>

            <!-- Model category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_model"
                    style="@style/CategoryStyle" />

                <!-- display field -->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!--model Text display -->
                    <TextView
                        android:id="@+id/model_display"
                        android:text="@string/category_fuel"
                        style="@style/DisplayFieldStyle" />
                </LinearLayout>
            </LinearLayout>

            <!-- Price category -->
            <LinearLayout
                android:id="@+id/container_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_price"
                    style="@style/CategoryStyle" />

                <!--  display field-->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!--price Text display -->
                    <TextView
                        android:id="@+id/price_display"
                        android:text="@string/category_fuel"
                        style="@style/DisplayFieldStyle" />
                </LinearLayout>
            </LinearLayout>

            <!-- Quantity category -->
            <LinearLayout
                android:id="@+id/container_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_quantity"
                    style="@style/CategoryStyle" />

                <!-- count field -->
                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2">

                    <!-- decrement button -->
                    <Button
                        android:id="@+id/decrement_button"
                        style="@style/Button"
                        android:background="@drawable/ic_remove"
                        android:layout_alignParentStart="true"/>

                    <!-- display field-->
                    <TextView
                        android:id="@+id/quantity_display"
                        android:text="@string/category_fuel"
                        style="@style/Button"
                        android:gravity="center_vertical"
                        android:layout_toEndOf="@+id/decrement_button"
                        android:layout_toStartOf="@+id/increment_button"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"/>

                    <!-- Increment Button -->
                    <Button
                        android:id="@+id/increment_button"
                        style="@style/Button"
                        android:background="@drawable/ic_add"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>

            </LinearLayout>

            <!-- Fuel category -->
            <LinearLayout
                android:id="@+id/container_fuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_fuel"
                    style="@style/CategoryStyle" />

                <!-- display field -->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <!-- Fuel type Text display -->
                    <TextView
                        android:id="@+id/fuel_display"
                        android:text="@string/category_fuel"
                        style="@style/DisplayFieldStyle" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_transmission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_transmission"
                    style="@style/CategoryStyle" />

                <!-- display field-->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <!-- Transmission Text display -->
                    <TextView
                        android:id="@+id/transmission_display"
                        android:text="@string/category_fuel"
                        style="@style/DisplayFieldStyle" />
                </LinearLayout>
            </LinearLayout>

            <!-- Contacts category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/contact_detail_name"
                    style="@style/CategoryStyle" />


                <!-- display field-->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <!-- name Text display -->
                    <TextView
                        android:id="@+id/name_display"
                        android:text="@string/category_fuel"
                        style="@style/DisplayFieldStyle" />
                </LinearLayout>

            </LinearLayout>

            <!-- Phone category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <Button
                    android:id="@+id/phone_button"
                    android:background="@drawable/ic_call"
                    style="@style/Button"
                    android:layout_marginEnd="65dp"/>


                <!-- display field-->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <!-- phone number display -->
                    <TextView
                        android:id="@+id/phone_display"
                        android:text="@string/category_fuel"
                        style="@style/DisplayFieldStyle" />
                </LinearLayout>

            </LinearLayout>

            <!-- Contacts category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <Button
                    android:id="@+id/email_button"
                    android:background="@drawable/ic_email"
                    style="@style/Button"
                    android:layout_marginEnd="65dp"/>

                <!-- display field-->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <!--Email address display -->
                    <TextView
                        android:id="@+id/email_display"
                        android:text="@string/category_fuel"
                        style="@style/DisplayFieldStyle" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_mode_edit"/>

    </RelativeLayout>
</ScrollView>